<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/call_waiter"
        android:icon="@drawable/ic_call_waiter"
        android:title="@string/call_waiter"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/content_description_call_waiter"/>

    <item android:id="@+id/checkout_order"
        android:icon="@drawable/ic_checkout"
        android:title="@string/checkout_order"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/content_description_checkout_order"/>

    <item android:id="@+id/delete_current_order"
        android:icon="@drawable/ic_checkout"
        android:title="@string/delete_current_order"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/content_description_delete_order"/>

    <item android:id="@+id/favourites"
        android:icon="@drawable/ic_favorites_white"
        android:title="@string/favourites"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/content_description_favourites"/>

    <item android:id="@+id/log_out"
        android:icon="@drawable/ic_log_out"
        android:title="@string/log_out"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/content_description_log_out"/>

</menu>