<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udacity.thefedex87.takemyorder.ui.activities.BarcodeScannerActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/open_camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_photo_camera"
            android:contentDescription="@string/content_description_scan_barcode"/>

        <SurfaceView
            android:id="@+id/camera_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_barcode_description"
            android:textSize="@dimen/scan_qrcode_description_text_size"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:layout_margin="@dimen/scan_qrcode_description_margin"/>
    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/open_qrcode_fab"
        android:layout_width="@dimen/fab_width"
        android:layout_height="@dimen/fab_height"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:elevation="@dimen/fab_elevation"
        android:contentDescription="@string/content_description_fab_add_order"
        android:src="@drawable/ic_open"
        android:layout_gravity="bottom|end"/>
</FrameLayout>
