<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udacity.thefedex87.takemyorder.ui.activities.RestaurantDetailsActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_container"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorPrimary"
        android:elevation="@dimen/app_bar_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetStart="@dimen/detail_content_intent_start"
            app:layout_collapseMode="pin" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginBottom="@dimen/checkout_food_list_margin_bottom"
        app:layout_constraintBottom_toTopOf="@+id/total_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_container">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/starters_summary_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/food_type_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/starter_dishes" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/order_summary_starter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_dishes_summary_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/food_type_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_dishes" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/order_summary_main_dishes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/side_dishes_summary_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/food_type_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/side_dishes" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/order_summary_side_dishes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/desserts_summary_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/food_type_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desserts" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/order_summary_desserts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/drinks_summary_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/food_type_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drinks" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/order_summary_drinks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/checkout_food_price_margin_bottom"
        android:layout_marginEnd="@dimen/checkout_food_price_margin_start_end"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/checkout_total_price_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Tot.: 54.80 €" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/checkout_food_price_margin_bottom"
        android:layout_marginStart="@dimen/checkout_food_price_margin_start_end"
        android:text="@string/total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/checkout_total_price_text_size"/>

    <RelativeLayout
        android:id="@+id/processing_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="#AA000000"
        android:elevation="10dp"
        android:visibility="gone">

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_above="@id/progress_bar"
            android:text="@string/submitting_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/check_out_submitting_text_size"
            android:textColor="@color/colorAccent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_marginTop="@dimen/check_out_submitting_pb_margin_bottom"
            android:layout_centerInParent="true"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
