<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/food_in_menu_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/food_in_menu_card_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/food_in_menu_card_margin"
        app:cardCornerRadius="@dimen/food_in_menu_card_corner_radius">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/food_in_menu_name"
                android:layout_width="0dp"
                android:layout_height="@dimen/food_in_menu_title_container_height"
                android:layout_marginEnd="@dimen/food_in_menu_title_container_margin_start_end"
                android:layout_marginStart="@dimen/food_in_menu_title_container_margin_start_end"
                android:layout_marginTop="@dimen/food_in_menu_title_container_margin_top_bottom"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="@dimen/food_in_menu_title_text_size"
                app:layout_constraintEnd_toStartOf="@+id/food_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Food name" />

            <TextView
                android:id="@+id/food_price"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/food_in_menu_title_container_height"
                android:layout_marginEnd="@dimen/food_in_menu_title_container_margin_start_end"
                android:layout_marginTop="@dimen/food_in_menu_title_container_margin_top_bottom"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="12.5€"/>

            <RelativeLayout
                android:id="@+id/food_image_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/food_in_menu_image_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/food_in_menu_name">
                <ImageView
                    android:id="@+id/food_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/food_in_menu_image_height"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_food"
                    android:contentDescription="@string/content_description_food_image"
                    />

                <!--<FrameLayout-->
                    <!--android:id="@+id/meal_in_order_counter_container"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--<ImageView-->
                        <!--android:background="@drawable/circle"-->
                        <!--android:layout_width="@dimen/food_in_menu_meal_in_order_counter_size"-->
                        <!--android:layout_height="@dimen/food_in_menu_meal_in_order_counter_size" />-->

                    <!--<TextView-->
                        <!--android:id="@+id/food_id_count_in_current_order"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="match_parent"-->
                        <!--tools:text="3"-->
                        <!--android:textAlignment="center"-->
                        <!--android:textSize="@dimen/food_in_menu_meal_in_order_counter_text_size"-->
                        <!--android:textColor="@color/white"/>-->
                <!--</FrameLayout>-->
                <include layout="@layout/circle_counter"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/food_image_to_animate"
                    android:layout_width="@dimen/food_in_menu_image_food_to_animate"
                    android:layout_height="@dimen/food_in_menu_image_food_to_animate"
                    android:layout_centerInParent="true"
                    android:alpha="0"
                    android:src="@drawable/ic_food"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorAccent"/>


            </RelativeLayout>


            <ProgressBar
                android:id="@+id/food_image_pb"
                android:layout_width="@dimen/progress_bar_size"
                android:layout_height="@dimen/progress_bar_size"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/food_description"
                app:layout_constraintEnd_toEndOf="@+id/food_image_container"
                app:layout_constraintStart_toStartOf="@+id/food_image_container"
                app:layout_constraintTop_toBottomOf="@+id/food_in_menu_name" />

            <TextView
                android:id="@+id/food_description"
                android:layout_width="match_parent"
                android:layout_height="@dimen/food_in_menu_description_height"
                android:layout_marginTop="@dimen/food_in_menu_description_margin"
                android:layout_marginStart="@dimen/food_in_menu_description_margin"
                android:layout_marginEnd="@dimen/food_in_menu_description_margin"
                android:ellipsize="end"
                android:maxLines="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/food_image_container"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula lorem suscipit pulvinar feugiat. Sed maximus feugiat tellus, sed iaculis libero consequat eu. Sed ultrices tempus eros a ornare. " />

            <TextView
                android:id="@+id/add_to_current_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/food_in_menu_action_margin"
                android:text="@string/add_to_order"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/food_in_menu_action_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/food_description" />

            <TextView
                android:id="@+id/show_food_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/food_in_menu_action_margin"
                android:layout_marginBottom="@dimen/food_in_menu_action_margin"
                android:layout_marginStart="@dimen/food_in_menu_action_show_detail_margin_start"
                android:text="@string/show_details"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/food_in_menu_action_text_size"
                app:layout_constraintBottom_toBottomOf="@+id/add_to_current_order"
                app:layout_constraintStart_toEndOf="@+id/add_to_current_order"
                app:layout_constraintTop_toTopOf="@+id/add_to_current_order" />

            <TextView
                android:id="@+id/subtract_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/food_in_menu_action_margin"
                android:layout_marginBottom="@dimen/food_in_menu_action_margin"
                android:layout_marginStart="@dimen/food_in_menu_action_subtract_food_margin_start"
                android:text="@string/subtract_food"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/food_in_menu_action_text_size"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/show_food_details"
                app:layout_constraintStart_toEndOf="@+id/show_food_details"
                app:layout_constraintTop_toTopOf="@+id/show_food_details" />

            <ImageView
                android:id="@+id/favourite_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/food_in_menu_action_favourite_margin_start"
                app:layout_constraintBottom_toBottomOf="@+id/show_food_details"
                app:layout_constraintStart_toEndOf="@+id/subtract_food"
                app:layout_constraintTop_toTopOf="@+id/show_food_details"
                app:srcCompat="@drawable/ic_favorite_empty"
                android:tint="@color/colorAccent"/>


        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>
